# ruststream-fred

./: .codespellrc  Cargo.toml  README.md  deny.toml  docker-compose.test.yml  justfile  mkdocs.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  docs.yml  release.yml
0.4/: 404.html  index.html  sitemap.xml
0.4/auth-tls/: index.html
0.4/dead-letter/: index.html
0.4/lists/: index.html
0.4/pubsub/: index.html
0.4/redis/: index.html
0.4/search/: search_index.json
0.4/streams/: index.html
0.4/testing/: index.html
0.4/transactions/: index.html
0.5/: 404.html  index.html  sitemap.xml
0.5/auth-tls/: index.html
0.5/dead-letter/: index.html
0.5/lists/: index.html
0.5/pubsub/: index.html
0.5/search/: search_index.json
0.5/streams/: index.html
0.5/testing/: index.html
0.5/transactions/: index.html
crates/ruststream-fred/: Cargo.toml  README.md
crates/ruststream-fred/examples/: fred_auth.rs  fred_dead_letter.rs  fred_delayed_retry.rs  fred_list.rs  fred_list_dead_letter.rs  fred_pubsub.rs  fred_reclaim.rs  fred_streams.rs  fred_testing.rs  fred_tls.rs  fred_transaction.rs
crates/ruststream-fred/src/: broker.rs  context.rs  convert.rs  deadletter.rs  delay.rs  envelope.rs  error.rs  lib.rs  list.rs  message.rs  publisher.rs  pubsub.rs  recovery.rs  stream.rs  subscriber.rs
crates/ruststream-fred/src/testing/: broker.rs  client.rs  mod.rs  publisher.rs  router.rs  subscriber.rs
crates/ruststream-fred/tests/: conformance_fred.rs  integration_fred.rs  testing_core.rs
docs/: auth-tls.md  dead-letter.md  index.md  lists.md  pubsub.md  redis.md  streams.md  testing.md  transactions.md
overrides/: main.html
templates/redis-list/: Cargo.toml  cargo-generate.toml
templates/redis-list/src/: main.rs  orders.rs  routes.rs
templates/redis-pubsub/: cargo-generate.toml
templates/redis-pubsub/src/: main.rs  orders.rs  routes.rs
templates/redis-stream/: cargo-generate.toml
templates/redis-stream/src/: main.rs  orders.rs  routes.rs
